--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "bootstrap": "^5.3.8",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^4.1.13",
     "tailwindcss-debug-screens": "^3.0.1"
   },
